fixed button div overlapping bug for small width layout

--- a/src/components/MainWindow.css
+++ b/src/components/MainWindow.css
@@ -33,7 +33,7 @@
 
 @media only screen and (max-width: 345px) {
   .cut-out { 
-    height: 450px;
+    height: 500px;
   }
 }
 
